deployment/k8s/mongo-express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: bloometti
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo-express
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo-express
    spec:
      containers:
        - name: mongo-express-container
          image: mongo-express
          ports:
            - containerPort: 8081
