deployment/k8s/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: bloometti
spec:
  selector:
    app.kubernetes.io/name: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
