deployment/k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: bloometti
spec:
  selector:
    app.kubernetes.io/name: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
